--- a/neotube-frontend/package.json
+++ b/neotube-frontend/package.json
@@ -12,6 +12,7 @@
     "cra-template": "1.2.0",
     "crypto-browserify": "^3.12.1",
     "https-browserify": "^1.0.0",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
